Cascading Change Log

2.1.0 [unreleased]

  Fixed issue where c.t.Tap#openForWrite did not honor the c.t.SinkMode#REPLACE setting.

  Added version update check to print out latest available release. Use system property cascading.update.skip=true
  to disable.

  Updated all tuple stream permutations to minimize new c.t.Tuple instantiations and maximize upstream Tuple reuse.

  Updated janino to version 2.6.1.

  Updated c.s.l.TextLine, c.s.l.TextDelimited, c.s.h.TextLine, and c.s.h.TextDelimited to encode/decode any supported
  j.n.c.Charset.

  Fixed issue where c.o.t.DateParser may throw an NPE if the value to be parsed was null.

  Added c.p.Props#buildProperties( Iterable<Map.Entry<String, String>> defaultProperties ) to allow for re-using
  and existing o.a.h.m.JobConf instances as default properties.

  Added c.p.a.FirstBy partial aggregator to allow for capturing first seen c.t.Tuple in a Tuple stream. Argument
  c.f.Fields j.u.Comparators are honored for secondary sorting.

  Updated c.p.a.AggregateBy to honor argumentField c.f.Fields j.u.Comparator instances for secondary sorting.

  Updated c.o.a.First to accumulate the first N seen c.t.Tuple instances.

  Added support for c.c.CascadeListener on c.c.Cascade instances.

  Updated c.p.j.InnerJoin.JoinIterator and sub-classes to re-use c.t.Tuple instances.

  Added support for restartable checkpoint c.f.Flow instances by providing a runID to identify run attempts.

  Updated build and tests to simplify development of alternative planners.

2.0.6

  Added "cascading.step.display.id.truncate" property to allow simple truncation of flow and step ID values in
  the step display name.

  Fixed issue where attempting to iterate the left most side of a join more than once would silently fail on the
  Hadoop platform.

  Fixed issue where step state was not properly removed from the Hadoop distributed cache during cleanup.
