@@ -10,3 +10,5 @@ foo,,,,8
 ,"",,,9
 "f",,,,"10"
 "f",,,",bin","11"
+"f",,,",bin",
+"f",,,,
