@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.1.0 [unreleased]
 
+  Fixed issue where c.s.u.DelimitedParser did not honor number of field found in a text delimited file header.
+
   Fixed issue where c.t.Tap#openForWrite did not honor the c.t.SinkMode#REPLACE setting.
 
   Added version update check to print out latest available release. Use system property cascading.update.skip=true
